<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/size_50sp"
            android:layout_height="@dimen/size_50sp"
            android:src="@mipmap/ic_launcher_round"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_15sp"
            android:paddingRight="@dimen/size_20sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user"
                    android:textColor="@color/clr_black"
                    android:textSize="@dimen/size_16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_and"
                    android:layout_marginLeft="@dimen/size_8sp"
                    android:textColor="@android:color/darker_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_125_others"
                    android:textColor="@color/clr_black"
                    android:textSize="@dimen/size_16sp"
                    android:layout_marginLeft="@dimen/size_8sp"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_liked_your_comment"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_5sp">

                <View
                    android:layout_width="@dimen/size_2sp"
                    android:layout_height="@dimen/size_15sp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="@dimen/size_3sp"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_5sp"
                    android:text="@string/text_dummy_noti"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/size_70sp"
            android:layout_height="@dimen/size_80sp"
            android:background="@color/clr_magenta"/>

    </LinearLayout>

</RelativeLayout>