<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tv_round_gray_border"
                android:paddingLeft="@dimen/size_15sp"
                android:paddingRight="@dimen/size_15sp"
                android:paddingTop="@dimen/size_5sp"
                android:paddingBottom="@dimen/size_5sp"
                android:text="@string/text_hash"
                android:textSize="@dimen/size_25sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/size_10sp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_what_i_eat"
                    android:textSize="@dimen/size_16sp"
                    android:textStyle="bold"
                    android:textColor="@color/clr_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tranding_hashtag"
                    android:textSize="@dimen/size_16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="@dimen/size_90sp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_4sp"
                android:gravity="start"
                android:text="@string/text_915_m"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/clr_black"
                android:textStyle="bold"
                android:background="@drawable/bg_gray"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inner_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8sp"
            android:paddingLeft="@dimen/size_5sp"
            android:orientation="horizontal"
            tools:listitem="@layout/include_rv_search_inner_layout"/>

    </LinearLayout>

</RelativeLayout>